Lowering JDK requirement to 8